Avance de memoria hasta el capítulo 5
Falta terminar de redactar los resúmenes de cada capítulo en el capitulo 1, en el capítulo 2 falta terminar de redactar lo que es las bibliotecas utilizadas y redactar un poco mas de los conceptos de las tecnologías. En el capitulo 3 falta terminar de redactar lo que es el proyecto. El capítulo 4 esta en proceso de revisión para dar por finalizado. En el capitulo 5 esta en revisión y falta terminar de redactar lo que es el diagrama de clases y el modelo E/R y falta todo el capítulo 6 y 7 más el resumen de la memoria

--- a/Formato Memoria/Capitulo1/1.1_Contexto.tex
+++ b/Formato Memoria/Capitulo1/1.1_Contexto.tex
@@ -1,11 +1,11 @@
-El ``Plan estratégico de la Universidad de Talca Visión 2020'' destaca el apoyo a todo tipo de actividades emprendidas por las distintas Organizaciones Estudiantiles reconocidas. Entre las actividades destacan: recepción de alumnos nuevos; celebración del día de la carrera; actividades sociales, culturales y deportivas; entre otras~\cite{5}.
+El ``Plan estratégico de la Universidad de Talca Visión 2020'' destaca el apoyo a todo tipo de actividades emprendidas por las distintas Organizaciones Estudiantiles (O.E.) reconocidas. Entre las actividades destacan: recepción de alumnos nuevos; celebración del día de la carrera; actividades sociales, culturales y deportivas; entre otras~\cite{5}.
 
 Para la realización de estas actividades se debe seguir un procedimiento, el cual está estipulado en la RU N\grad 2083 promulgada el 12 de diciembre del 2017, la cual dice:
 
-\begin{tasks}[counter-format = {tsk[A].}]
-    \task \textbf{Caso Federación y Organizaciones Estudiantiles:}
+\begin{enumerate}[label=\textbf{\Alph*.}]
+    \item \textbf{Caso Federación y Organizaciones Estudiantiles:}
 
-    Sólo el Presidente, Tesorero o Secretario de finanzas de la Federación (Fedeut) o uno de Grupos Intermedios pueden solicitar por escrito Fondos para realizar actividades. Esta solicitud se envía a quien dirige la Dirección de Apoyo a Actividades Estudiantiles (DAAE), de la Vicerrectoría de Desarrollo Estudiantil (VDE), al menos 20 días antes del inicio de la actividad. 
+    Sólo el Presidente, Tesorero o Secretario de finanzas de la Federación (Fedeut) respectiva o uno de Grupos Intermedios respectivo pueden solicitar por escrito Fondos para realizar actividades. Esta solicitud se envía a quien dirige la Dirección de Apoyo a Actividades Estudiantiles (DAAE), de la Vicerrectoría de Desarrollo Estudiantil (VDE), al menos 20 días antes del inicio de la actividad. 
 
     Quien dirige la DAAE, una vez que verifica la solicitud enviada por Fedeut o Grupo Intermedio y una vez aprobada, realiza y envía otra solicitud a quien dirige la VDE.
 
@@ -14,20 +14,18 @@ Para la realización de estas actividades se debe seguir un procedimiento, el cu
     Una vez tramitado el acto administrativo, se debe distribuir los documentos anteriormente mencionados de la siguiente forma: 
 
     \begin{itemize}
-        \item La documentación original la archiva Secretaría General.
+        \item La Secretaría General archiva la documentación original.
         \item La primera copia es enviada al Departamento de Tesorería y Presupuesto.
         \item La segunda para el archivo de la Vicerrectoría Estudiantil.
         \item La tercera es enviada a la Federación o Grupo Intermedio interesada.
         \item La cuarta es enviada a la Unidad de Gobierno Transparente.
     \end{itemize}
 
-    Este proceso se puede apreciar con mayor detalle en la \textbf{Figura \ref{fig: Solicitud_Federacion}}.
+    \item \textbf{Caso de Centros de Alumnos:}
 
-    \task \textbf{Caso de Centros de Alumnos}
+    Sólo el Presidente, Tesorero o Secretario de Finanzas del Centro de Alumnos (CAA) respectivo pueden solicitar por escrito Fondos para realizar actividades. Esta solicitud se envía a quien dirige la Dirección de Escuela correspondiente al menos 20 días antes del inicio de la actividad. 
 
-    Sólo el Presidente, Tesorero o Secretario de finanzas del Centro de Alumnos (CAA) pueden solicitar por escrito Fondos para realizar actividades. Esta solicitud se envía a quien dirige la Dirección de Escuela correspondiente al menos 20 días antes del inicio de la actividad. 
-
-    Quien dirige la Dirección de Escuela, una vez que verifica la solicitud enviada por el CAA, eleva la solicitud a quien dirige la Decanatura de la Facultad o a quien dirige la Vicerrectoría de Desarrollo Estudiantil (para el caso de las Escuelas no adscritas a una Facultad).
+    El(la) Director(a) de Escuela, una vez que verifica la solicitud enviada por el CAA, eleva la solicitud a quien dirige la Decanatura de la Facultad o a quien dirige la Vicerrectoría de Desarrollo Estudiantil (para el caso de las Escuelas no adscritas a una Facultad).
 
     Luego de que quien dirige la Decanatura de la Facultad o Vicerrectoría de Desarrollo Estudiantil según corresponda, verifique y apruebe la solicitud de Fondo enviada por quien dirige la Dirección de Escuela, emite una Resolución Exenta, en original y cuatro copias, las cuales son enviadas a controlaría universitaria para el respectivo control de legalidad.
 
@@ -40,13 +38,11 @@ Para la realización de estas actividades se debe seguir un procedimiento, el cu
         \item La cuarta es enviada a la Unidad de Gobierno Transparente.
     \end{itemize}
 
-    Se puede apreciar con mayor detalle en la \textbf{Figura \ref{fig: Solicitud_CAA}}.
-
-\end{tasks}
+\end{enumerate}
 
 En ambos casos, el Departamento de Presupuesto hace responsable de la actividad presupuestaria correspondiente a la O.E. (ya sea Fedeut, CAA o Grupo Intermedio) que la solicita.
 
-El Departamento de Tesorería emite el pago a nombre del Presidente, Tesorero o Secretario de Finanzas de la O.E. y adjunta la segunda copia de la Resolución al Comprobante de Egreso para la posterior rendición del Fondo.
+El Departamento de Tesorería emite el pago a nombre del Presidente, Tesorero o Secretario de Finanzas de la O.E. que inició el proceso y adjunta la segunda copia de la Resolución al Comprobante de Egreso para la posterior rendición del Fondo.
 
 Al representante de la O.E. se le asigna las siguientes responsabilidades:
 
