--- a/Formato Memoria/Capitulo1/1.3_Presentacion_Solucion.tex
+++ b/Formato Memoria/Capitulo1/1.3_Presentacion_Solucion.tex
@@ -1,12 +1,12 @@
-En base al problema descrito anteriormente es que nace este proyecto el cual trata de un sistema web que permita a las distintas O.E. la confección de solicitud de fondos por rendir y su posterior rendición, de acuerdo a lo estipulado por la RU N\grad 2083 del año 2017. Cabe señalar que esta RU señala los posibles errores por los cuales una rendición pueda ser rechazada, como por ejemplo, montos superiores a lo solicitado, boletas fuera del plazo en que se realiza la actividad, entre otros.
+En base al problema descrito anteriormente es que nace este proyecto el cual consiste en implementar un sistema web que permita a las distintas O.E. la confección de solicitudes de fondos por rendir y su posterior rendición, de acuerdo a lo estipulado por la RU N\grad 2083 del año 2017. Cabe señalar que esta RU señala los posibles errores por los cuales una rendición pueda ser rechazada, como por ejemplo, montos superiores a lo solicitado o boletas fuera del plazo en que se realiza la actividad, entre otros.
 
 Dentro de las ventajas de contar con esta herramienta se tienen las siguientes:
 
 \begin{itemize}
-    \item Los usuarios tienen un respaldo de las resoluciones realizadas.
+    \item Los usuarios tienen un respaldo de las solicitudes y resoluciones realizadas.
     \item Los usuarios tienen un instructivo de cómo realizar una rendición según los estándares que estipula la Universidad.
     \item El sistema busca el óptimo monto conformado por la suma de boletas ingresadas por el usuario, de tal manera que sea igual o lo más cercana al monto solicitado.
     \item El sistema permite guardar una rendición incompleta, a la cual se le asigna un estado de pendiente.
-    \item El sistema verifica que la rendición se realice dentro del periodo estipulado por la RU N\grad 2083 del año 2017 la cual dice que son 20 días contado desde el último acto administrativo de la transferencia de recursos.
+    \item El sistema verifica que la rendición se realice dentro del periodo estipulado por la RU N\grad 2083 del año 2017, la cual dice que son 20 días corridos, contados desde el último acto administrativo de la transferencia de recursos.
 \end{itemize}
 
