--- a/Formato Memoria/Capitulo1/1.4_Objetivos.tex
+++ b/Formato Memoria/Capitulo1/1.4_Objetivos.tex
@@ -1,4 +1,4 @@
-Dado que este sistema pretende aliviar todos los inconvenietnes de forma en que se puedan incurrir tanto al confeccionar la solicitud de fondo por rendir como en su posterior rendición, se estabecen los siguientes objetivos:
+Dado que este sistema pretende aliviar todos los inconvenientes \emph{de forma} en que se pueda incurrir tanto al confeccionar la solicitud de fondo por rendir como en su posterior rendición, se estabecen los siguientes objetivos:
 
 \subsection{Objetivo general}
     \begin{itemize}
@@ -6,11 +6,14 @@ Dado que este sistema pretende aliviar todos los inconvenietnes de forma en que 
     \end{itemize}
 
 \subsection{Objetivos específicos} 
+
+Para satisfacer el objetivo general, se definen los siguientes objetivos específicos:
+
     \begin{itemize}
         \item Modelar el proceso de confección de solicitudes de fondos por rendir.
 
         \item Modelar el proceso de rendición de gastos.
 
-        \item Desarrollar una aplicación web que asista al proceso de solicitud de fondos por rendir y su posterior rendición de gastos.
+        \item Diseñar e implementar una aplicación web que asista al proceso de solicitud de fondos por rendir y su posterior rendición de gastos.
 
     \end{itemize}
