--- a/Formato Memoria/Capitulo1/1.5_Alcances.tex
+++ b/Formato Memoria/Capitulo1/1.5_Alcances.tex
@@ -3,11 +3,11 @@ La aplicación, \emph{SimRend}, es un sistema web de fondos por rendir para Fede
 \begin{itemize}
     \item Confeccionar solicitudes de fondos por rendir que detallen en qué se utiliza el dinero, participantes de la actividad, periodo en la que se realiza y su responsable.
     
-    \item Generar PDF de Solicitud de fondos por rendir.
+    \item Generar un PDF de solicitud de fondos por rendir.
 
     \item Confeccionar la rendición de fondos por rendir que detallen los gastos incurridos de una actividad tras ser aprobada su correspondiente solicitud.
     
-    \item Gestionar los comprobantes de gastos (boletas o facturas) incurridas en un evento. Esto comprende la validación de fechas, listado de las boletas y sellección del conjunto de boletas que mejor se ajusta al presupuesto expuesto en la solicitud de fondo enviada por la O.E. a quien dirige la Dirección de Escuela o la DAAE.
+    \item Gestionar los comprobantes de gastos (boletas o facturas) incurridas en un evento. Esto comprende la validación de fechas, listado de los comprobantes y selección del conjunto de comprobantes que mejor se ajusta al presupuesto expuesto en la solicitud de fondo enviada por la O.E. a quien dirige la Dirección de Escuela o la DAAE.
     
     %\item Generar hojas particionadas para pegar las boletas y/o facturas que se rinden.
 \end{itemize}
