--- a/Formato Memoria/Capitulo2/2.1.1_Conceptos.tex
+++ b/Formato Memoria/Capitulo2/2.1.1_Conceptos.tex
@@ -1,103 +1,93 @@
-Para profundizar lo explicado en el contexto del problema que se encuentra en la Sección \ref{sec:Contexto} del Capítulo \ref{sec:Intro}, es que hace mención a los conceptos claves para la comprensión del proceso el cual se rige la aplicación.
+Para profundizar lo explicado en la \textbf{Sección \ref{sec:Contexto}}~\emph{Contexto del problema}, es que hace mención a los conceptos claves para la comprensión del proceso que rige la aplicación.
 
 \paragraph{Evento}
 
-  Un evento según el ``Plan estratégico de la Universidad de Talca Visión 2020'' es una actividad emprendida por las distintas Organizaciones Estudiantiles reconocidas tales como recepción de alumnos nuevos, celebración del día de la carrera, actividades culturales y deportivas, actividades sociales, entre otras ~\cite{5}. 
+  Según el ``Plan estratégico de la Universidad de Talca Visión 2020'', un evento es una actividad emprendida por las distintas Organizaciones Estudiantiles (OE), tales como recepción de alumnos nuevos, celebración del día de la carrera, actividades culturales y deportivas, y actividades sociales, entre otras ~\cite{5}. 
 
 \paragraph{Solicitud}
 
-  Una solicitud es un documento en el cual se pide ayuda económica a quien dirige la Dirección de Escuela (en el caso de CAA) o a quien dirige la DAAE (en el caso de Federación) para llevar a cabo un evento organizado por la Organización Estudiantil en donde se debe detallar:
+  Una solicitud es un documento en el cual se pide ayuda económica a quien dirige la Dirección de Escuela (en el caso de CAA) o a quien dirige la DAAE (en el caso de Federación) para llevar a cabo un evento organizado por la OE, en donde se debe detallar:
 
   \begin{itemize}
       \item Nombre del evento.
       \item Fecha de inicio y de término de la actividad.
-      \item Lugar a realizar la actividad. 
+      \item Lugar donde se realiza la actividad. 
       \item Monto. 
       \item Categorías en que incurrirán los gastos.
-      \item Datos de los participantes como el nombre y rut (en caso de que una actividad sea dirigida a un grupo de personas). 
-      \item Datos del encargado de la actividad (Presidente o Secretario de Finanzas de la Organización Estudiantil).
+      \item Datos de los participantes como el nombre y rut (en caso de que sea una actividad dirigida a un grupo de personas). 
+      \item Datos del encargado de la actividad (Presidente o Secretario de Finanzas de la OE).
   \end{itemize}
 
-\paragraph{Resolución Universitaria(RU)}
+\paragraph{Resolución Universitaria (RU)}
 
-  Una Resolución puede ser un decreto, una decisión o un fallo que emite una determinada autoridad. Estas pueden establecer reglas, voluntades, etc. pero para efectos de la universidad, se habla de Resolución Universitaria en donde se decreta las trasferencias de fondos para llevar a cabo actividades a las cuales se realizarán por la Organización Estudiantil al momento de que se acepta la solicitud enviada por este.
+  Una Resolución puede ser un decreto, una decisión o un fallo que emite una determinada autoridad. Estas pueden establecer reglas, voluntades, etc. Si bien, hay una gran variedad de resoluciones, en esta memoria cobra mayor interés las Resoluciones Universitarias en donde se decreta las trasferencias de fondos para llevar a cabo actividades por parte de las OE, al momento de que se acepta la solicitud enviada por éstas.
 
-  En este documento se menciona la suma que se transfiere a la Organización Estudiantil, el propósito que se solventara con el dinero, el nombre del evento, la fecha en que ocurre la actividad, el lugar en que se realiza el evento y participantes en específicos en caso de haberlo.
-
-  Además, se establece a quien serán dirigido los dineros, en este caso al Presidente o Secretario de Finanzas de la Organización estudiantil.
+  En esta RU se menciona la suma que se transfiere a la OE, el propósito que se solventará con el dinero, el nombre del evento, la fecha en que ocurre la actividad, el lugar en que se realiza el evento y participantes en específicos en caso de haberlos. Además, se establece a quien serán dirigidos los dineros, en este caso al Presidente o Secretario de Finanzas de la OE.
 
   Por otra parte, el código de una RU es la unión del año con su número de documento. 
 
   \paragraph{Rendición}
 
-  Una rendición es el documento en el cual se da cuenta de todos los gatos que incurrieron en una actividad o evento realizado por la organización universitaria detalladamente. 
+  Una rendición es el documento en el cual se da cuenta detallada de todos los gastos que incurrieron en una actividad o evento realizado por la OE. En el encabezado del documento se debe indicar lo siguiente:
+  \begin{enumerate*}[label=(\roman*)]
+    \item número de resolución,
+    \item unidad (por ejemplo, el nombre de la escuela),
+    \item nombre Jefe Directo (por ejemplo, Director de escuela),
+    \item responsable del fondo,
+    \item rut del responsable,
+    \item total solicitado,
+    \item total rendido,
+    \item fono anexo y
+    \item email del responsable.
+  \end{enumerate*}
   
-  En el encabezado del documento se debe detallar lo siguiente:
+  El detalle que debe ir en el documento de rendición para las facturas es:
+  \begin{enumerate*}[label=(\roman*)]
+    \item número de documento,
+    \item fecha,
+    \item nombre del proveedor,
+    \item descripción,
+    \item monto y
+    \item centro de costo.
+  \end{enumerate*}
   
-  \begin{itemize}
-    \item Número de Resolución
-    \item Unidad (por ejemplo, el nombre de la escuela)
-    \item Nombre Jefe Directo (por ejemplo, Director de escuela)
-    \item Responsable del Fondo
-    \item Rut del responsable
-    \item Total solicitado
-    \item Total rendido
-    \item Fono anexo
-    \item email del responsable
-  \end{itemize}
+  En cuanto al detalle que debe ir en la sección para las boletas con gastos comunes, se tiene:
+  \begin{enumerate*}[label=(\roman*)]
+    \item número de documento,
+    \item fecha,
+    \item nombre del proveedor,
+    \item descripción y
+    \item monto.
+  \end{enumerate*}
   
-  En el detalle que debe ir en el documento de rendición para las facturas son:
-  
-  \begin{itemize}
-    \item Número de documento
-    \item Fecha
-    \item Nombre del proveedor
-    \item Descripción
-    \item Monto
-    \item C. Costo
-  \end{itemize}
-  
-  En cuanto al detalle que debe ir en la sección para las boletas con gastos comunes son:
-  
-  \begin{itemize}
-    \item Número de documento
-    \item Fecha
-    \item Nombre del proveedor
-    \item Descripción
-    \item Monto
-  \end{itemize}
-  
-  Mientras que en el detalle que debe ir en la sección para las boletas con gastos individuales son:
-  
-  \begin{itemize}
-    \item Número de documento
-    \item Fecha
-    \item Nombre del proveedor
-    \item Descripción
-    \item Monto
-    \item Total monto de gastos de todas las Categorías por alumno
-    \item Nombre del alumno a reembolsar
-    \item Total reembolso por participante
-  \end{itemize}
+  Mientras que en el detalle que debe ir en la sección para las boletas con gastos individuales se debe indicar:
+  \begin{enumerate*}[label=(\roman*)]
+    \item número de documento,
+    \item fecha,
+    \item nombre del proveedor,
+    \item descripción,
+    \item monto,
+    \item total monto de gastos de todas las Categorías por alumno,
+    \item nombre del alumno a reembolsar y
+    \item total a reembolsar por participante.
+  \end{enumerate*}
   
   Además, debe ir un resumen en donde se indique:
-  
-  \begin{itemize}
-    \item Total de gastos
-    \item Más Reintegro por caja
-    \item Total de rendición
-  \end{itemize}
+  \begin{enumerate*}[label=(\roman*)]
+    \item total de gastos,
+    \item reintegro por caja y
+    \item total de rendición.
+  \end{enumerate*}
   
   Otro de los resúmenes que debe existir es el detalle de reembolso por participante que indique:
+  \begin{enumerate*}[label=(\roman*)]
+    \item nombre de los participantes,
+    \item monto total por participante y
+    \item total de reembolso.
+  \end{enumerate*}
   
-  \begin{itemize}
-    \item Nombre de los participantes
-    \item Monto total por participante
-    \item Total de reembolso
-  \end{itemize}
+  Por último, debe ir la firma del responsable de la rendición y junto con ello debe ir el nombre, el cargo que tiene en la organización y en caso de ser un CAA indicar el nombre de la carrera, si no a la facultad, que pertenece.
   
-  Y por último debe ir la firma del responsable de la rendición y junto con ello debe ir el nombre, el cago que tiene en la organización y en caso de ser una C.A.A. indicar el nombre de la carrera, sino a la facultad que pertenece.
-  
-  Por otra parte se deben adjuntar los documentos originales se encuentran en la rendición y en caso de tener gastos superiores a 3 UTM se deben adjuntar tres cotizaciones ~\cite{5}.
+  Por otra parte se deben adjuntar los documentos originales que se encuentran en la rendición. En caso de tener gastos superiores a 3 UTM se deben adjuntar tres cotizaciones ~\cite{5}.
   
   
