--- a/Formato Memoria/Capitulo2/2.2.1_Framework.tex
+++ b/Formato Memoria/Capitulo2/2.2.1_Framework.tex
@@ -1,5 +1,5 @@
 \begin{itemize}
     \item   \begin{description}
-                \item[ASP.NET Core:] es la nueva versión modular del framework .NET, la cual es multiplataforma y Open Source diseñado para la creación de aplicaciones modernas conectadas a Internet, como aplicaciones web y APIs Web.
+                \item[ASP.NET Core:] framework diseñado para la creación de aplicaciones modernas conectadas a Internet, tales como aplicaciones web y APIs Web. Además es multiplataforma y Open Source.
             \end{description}    
 \end{itemize}
