--- a/Formato Memoria/Capitulo2/2.2_Tecnologias_Utilizadas.tex
+++ b/Formato Memoria/Capitulo2/2.2_Tecnologias_Utilizadas.tex
@@ -1,10 +1,10 @@
-Para resolver el problema mencionado en el Capítulo \ref{sec:Intro}, existen muchas tecnologías dentro de las cuales se encuentra, PHP, Ruby on rails, WordPress, Wix, entre otras. Pero para este proyecto se utilizó ASP.NET Core cuyo motivo se debe a que es un lenguaje sólido y robusto, tanto para proyectos pequeños, grandes o con gran potencial de crecimiento. Además, está orientado a objeto debido a que C\# conforma parte de la tecnología, haciendo que el código sea ordenado y legible. Por otra parte, se puede utilizar para programar aplicaciones móviles, web o incluso para aplicaciones de computadoras de escritorio. Por último, otra de las razones de escoger esta tecnología es porque las empresas del rubro la están solicitando como conocimientos requeridos. 
+Para resolver el problema mencionado en el Capítulo \ref{sec:Intro}, existen muchas tecnologías dentro de las cuales se encuentra, PHP, Ruby on rails, WordPress y Wix, entre otras. Pero para este proyecto se utiliza ASP.NET Core cuyo motivo se debe a que es un lenguaje sólido y robusto, tanto para proyectos pequeños, grandes o con gran potencial de crecimiento. Además, está orientado a objetos debido a que C\# conforma parte de la tecnología, haciendo que el código sea ordenado y legible. Por otra parte, se puede utilizar para programar aplicaciones móviles, web o incluso para aplicaciones de computadoras de escritorio. Por último, otra de las razones de escoger esta tecnología es porque las empresas del rubro la están solicitando como conocimientos requeridos. 
 
-Para entrar un poco más en detalle, se dará a conocer pequeñas descripciones de los principales componentes que cuenta esta tecnología, además de las librerías que se utilizó en el proyecto.
+Para entrar un poco más en detalle, se da a conocer pequeñas descripciones de los principales componentes que cuenta esta tecnología, además de las librerías que se utilizan en el proyecto.
 
 \begin{itemize}
     \item   \begin{description}
-                \item[HTML-Razor:] HTML es un lenguaje de marcado de hipertextos el cual dispone de un conjunto de etiquetas las cuales son insertadas en un documento que puede mostrar la información a través de un navegador web. Este cuenta ademas con Razor, el cual es una sintaxis basada en C\# que permite usarse como motor de programación en las vistas html. 
+                \item[HTML-Razor:] HTML es un lenguaje de marcado de hipertextos el cual dispone de un conjunto de etiquetas que son insertadas en un documento que puede mostrar la información a través de un navegador web. Este cuenta ademas con Razor, que es una sintaxis basada en C\# que permite usarse como motor de programación en las vistas HTML. 
             \end{description}
 
     \item   \begin{description}
@@ -16,8 +16,11 @@ Para entrar un poco más en detalle, se dará a conocer pequeñas descripciones 
             \end{description}
 
     \item   \begin{description}
-                \item[C\#:] Lenguaje de programación orientado a objetos el cual fue desarrollado por Microsoft para la plataforma dotNET. Su sintaxis básica proviene de c/c++ y es similar a java e incluye mejoras cuyo origen son de otros lenguajes.
+                \item[C\#:] Lenguaje de programación orientado a objetos el cual fue desarrollado por Microsoft para la plataforma dotNET. Su sintaxis básica proviene de C/C++ y es similar a java, e incluye mejoras cuyo origen son de otros lenguajes.
+            \end{description}
+    
+    \item   \begin{description}
+                \item[Modelo Vista Controlador (MVC):]   Es un estilo de arquitectura de software que separa los datos de una aplicación, la interfaz de usuario, y la lógica de control en tres componentes distintos: Modelo es donde se encuentran los datos que maneja el sistema, la lógica de negocio y los mecanismos de persistencia. La Vista es la información que la aplicación muestra al cliente a través de la interfaz de usuario obtenida de los datos almacenados en el Modelo. Por último, el Controlador se encarga de actuar como puente para el envío de información entre el Modelo y la Vista. Además se realizan las transformaciones necesarioas para adaptar los datos a las necesidades de cada uno.
             \end{description}
     
 \end{itemize}
-
