--- a/Formato Memoria/Capitulo2/2.4.1_Scrum.tex
+++ b/Formato Memoria/Capitulo2/2.4.1_Scrum.tex
@@ -4,9 +4,6 @@ Su objetivo principal es ser un proceso iterativo e incremental que ayuda a la g
 
 Scrum produce resultados en periodos cortos de tiempos (aproximadamente 30 días), delegando al equipo de trabajo la responsabilidad de escoger la mejor forma de trabajar.
 
-En resumen, la clave del éxito de Scrum son los sprint, los cuales pueden durar de dos a cuatro semanas, en donde al iniciar cada uno de estos, se seleccionan una lista de historias de usuarios (backlog). Por otra parte, dentro del transcurso de cada iteración, diariamente se realizan breves reuniones de aproximadamente 15 minutos, las que ayudan a conocer el avance del desarrollo del proceso.
+La clave del éxito de Scrum son los \emph{sprints}, los cuales pueden durar de dos a cuatro semanas, en donde al iniciar cada uno de estos, se seleccionan una lista de historias de usuarios (backlog). Por otra parte, dentro del transcurso de cada iteración, diariamente se realizan breves reuniones de aproximadamente quince minutos, las que ayudan a conocer el avance del desarrollo del proceso.
 
-
-
-
-
+%Por otra parte, es muy comun que en Scrum hable de \textbf{\emph{historias de usuario}}, ya que es de mucha importancia. Estas son pequeñas descripciones de los requerimientos de un cliente. Para su redacción se debe considerar la descripción del rol, la funcionalidad y el resultado esperado en una frase cortas, cumpliendo con el siguiente formato: \textbf{Como $<$quién$>$ Quiero $<$qué$>$ Para $<$objetivo$>$}.
