--- a/Formato Memoria/Capitulo2/2.4_Metodologia_Agil.tex
+++ b/Formato Memoria/Capitulo2/2.4_Metodologia_Agil.tex
@@ -2,7 +2,7 @@ Tras las constantes fallas en los proyectos de desarrollo antes del año 2001, e
 
 \begin{itemize}
     \item Valorar al individuo y las interacciones del equipo de desarrollo por sobre el proceso y las herramientas.
-    \item Desarrollar software que funciona más que conseguir una buena documentación.
+    \item Desarrollar software que funciona por sobre conseguir una buena documentación.
     \item Valorar la colaboración con el cliente más que la negociación de un contrato.
     \item Responder a los cambios más que seguir estrictamente un plan.
 \end{itemize}
@@ -12,16 +12,16 @@ Este marco de trabajo aporta gran flexibilidad a los cambios manteniendo las con
 Cabe destacar que la metodología ágil se caracteriza por:
 
 \begin{itemize}
-    \item Equipos multidisciplinares y organizados de acuerdo con las necesidades de cada proyecto.
+    \item Equipos multidisciplinares y organizados de acuerdo a las necesidades de cada proyecto.
     \item La importancia de la comunicación entre los miembros que conforman el proyecto.
     \item La satisfacción del cliente ante el proyecto a desarrollar a través de la constante comunicación y así lograr evitar fallos y retrasos.
-    \item La gran motivación e implicación del equipo de desarrollo del proyecto, dado que todos los miembros pueden conocer el estado del proyecto en todo momento, de modo que todas las ideas de sus integrantes son de gran importancia.
+    \item La gran motivación e implicación del equipo de desarrollo del proyecto. Dado que todos los miembros pueden conocer el estado del proyecto en todo momento, todas las ideas de sus integrantes son de gran importancia.
     \item La adaptabilidad a que los requisitos cambien incluso en etapas tardías del desarrollo.
-    \item El ahorro de tiempo y de costes dado a que se trabaja de una manera más eficaz y sin olvidar el presupuesto acordados junto con el tiempo de entrega definido al comienzo del proyecto.
-    \item Trabajar con mayor velocidad y eficiencia, dado a que se realizan entregas parciales y así detectar errores lo antes posible y eliminar características innecesarias del producto.
+    \item El ahorro de tiempo y de costes dado que se trabaja de una manera más eficaz y sin olvidar el presupuesto acordado junto con el tiempo de entrega definido al comienzo del proyecto.
+    \item Trabajar con mayor velocidad y eficiencia, dado que se realizan entregas parciales y así detectar errores lo antes posible y eliminar características innecesarias del producto.
     \item Rápido retorno de la inversión debido a las constantes entregas parciales en las cuales se muestra las funcionalidades principales del producto, haciendo que la rentabilidad de la inversión sea de manera más acelerada.
 \end{itemize}
 
-Existe muchas metodologías, pero con distintas orientaciones acerca de cómo llevar a cabo el proceso de desarrollo de software, entre las cuales se encuentran Scrum (Marco de trabajo seleccionado para el desarrollo del proyecto el cual se dará énfasis más adelante), XP (eXtreme Programming), Métodos Crystal, FDD (Feature Driven Development), ASD (Adaptive Software Development), RUP (Rational Unified Process), etc.
+Existen muchas metodologías, pero con distintas orientaciones acerca de cómo llevar a cabo el proceso de desarrollo de software. Entre ellas se encuentran \emph{Scrum} (Marco de trabajo seleccionado para el desarrollo del proyecto, el cual se describe más adelante), XP (eXtreme Programming), Métodos Crystal, FDD (Feature Driven Development), ASD (Adaptive Software Development), RUP (Rational Unified Process), etc.
 
-De todos los métodos ágiles mencionados anteriormente se escoge Scrum. Es por ello por lo que se dará énfasis en los siguientes ítems explicando: de que trata, cuáles son los roles que se deben cumplir para que funcione el método, los artefactos que dan vida al proyecto, las reuniones las cuales ayudan a ver la planificación; problemas y avances del producto y, por último, el ciclo de vida que tiene Scrum.
+De todos los métodos ágiles mencionados anteriormente se escoge Scrum. Es por ello que se describe en las siguientes secciones, explicando de que trata, cuáles son los roles que se deben cumplir para que funcione el método, los artefactos que dan vida al proyecto, las reuniones las cuales ayudan a ver la planificación; problemas y avances del producto y, por último, el ciclo de vida que tiene Scrum.
