--- a/Formato Memoria/Capitulo2/2_Introduccion.tex
+++ b/Formato Memoria/Capitulo2/2_Introduccion.tex
@@ -1,5 +1,4 @@
-Este capítulo hace referencia a los conceptos necesarios para la correcta compresión del proyecto realizado, tales como el proceso el cual se desenvuelve la aplicación, la metodología, tecnologías y herramientas a utilizar.
-
+Este capítulo hace referencia a los conceptos necesarios para la correcta compresión del proyecto realizado, tales como el proceso sobre el cual se desenvuelve la aplicación, la metodología de desarrollo de software, en este caso Scrum, y las tecnologías y herramientas a utilizar.
 
 
 
