--- a/Formato Memoria/Capitulo3/3.1_Entorno.tex
+++ b/Formato Memoria/Capitulo3/3.1_Entorno.tex
@@ -1,1 +1,1 @@
-Antes de comenzar a explicar cómo fue el proceso de la metodología utilizada, se detalla como es el ambiente en el cual se realizó el proyecto. Este contempla el análisis de las personas, las cualidades de la aplicación y las herramientas utilizadas para el desarrollo del producto.
+Antes de comenzar a explicar cómo fue el proceso de la metodología utilizada, se detalla cómo es el ambiente en el cual se realiza el proyecto. Este contempla el análisis de las personas, las cualidades de la aplicación y las herramientas utilizadas para el desarrollo del producto.
