--- a/Formato Memoria/Capitulo3/3.2_Metodologia.tex
+++ b/Formato Memoria/Capitulo3/3.2_Metodologia.tex
@@ -1,14 +1,11 @@
-Existen muchas metodologías las cuales tienen amplia documentación y han probado ser eficientes para casos en específicos. Los motivos por los cuales se utiliza la metodología ágil Scrum son:
+Para llevar a cabo el desarrollo del sistema a implementar con flexibilidad para afrontar cambios en las distintas funcionalidades requeridas en el proyecto, se elige Scrum como metodología de desarrollo de software. Si bien existen muchas metodologías las cuales tienen amplia documentación y han probado ser eficientes para casos en específicos, los motivos por los cuales se utiliza la metodología ágil Scrum son:
 
 \begin{itemize}
     \item Completa participación del cliente y prueba de funcionalidades para obtener retroalimentación.
 
     \item Se pueden obtener los cambios y adaptarse al proyecto en cada Sprint.
-
+    
+    \item La experiencia que el autor ha tenido en el desarrollo de otros proyectos realizados en el proceso de formación académica.
+    
     \item Como la idea principal es realizar rendiciones y se han aclarado algunos requerimientos, mas no son todos, es que se espera que el proyecto aumente en el proceso de desarrollo. Es por esta incertidumbre que se escoge la metodología Scrum, ya que ayuda al cliente y al equipo de trabajo a definir los requisitos del proyecto de modo incremental.
 \end{itemize}
-
-Cabe destacar que a pesar de que Scrum está diseñado para trabajar en equipos, para efectos de esta memoria, se tuvo que ajustar cada rol a sólo un individuo, excepto el de los stakeholders los cuales ayudan a asegurar que el software desarrollado cumpla con las expectativas.
-
-En cuanto a la duración de cada Sprint, se determina en tres semanas, tiempo relativamente razonable para realizar iteraciones de productos utilizables.
-
