--- a/Formato Memoria/Capitulo3/3_Introduccion.tex
+++ b/Formato Memoria/Capitulo3/3_Introduccion.tex
@@ -1,1 +1,1 @@
-Uno de los puntos más críticos al momento de desarrollar un proyecto de software es la elección de la metodología que se utiliza ya que otorga la capacidad de organizar y responder las necesidades el proyecto. Además de que, una vez elegida la metodología no hay vuelta atrás.
+Uno de los puntos más críticos al momento de desarrollar un proyecto de software es la elección de la metodología que se utiliza ya que otorga la capacidad de organizar y responder a las necesidades el proyecto. Además de que, una vez elegida la metodología no hay vuelta atrás.
