--- a/Formato Memoria/Glosario.tex
+++ b/Formato Memoria/Glosario.tex
@@ -23,7 +23,7 @@
 				\item[Director de Escuela:] académico que con dedicación preferente, está encargado de la gestión del plan de estudios de la(s) Carrera(s) a su cargo. Es designado por el Rector a proposición del Decano y depende jerárquicamente de éste ultimo~\cite{1}.			\end{description}
 
 	\item 	\begin{description}
-			    \item[O.E.:] Organizaciones Estudiantiles. Estas son federación de estudiantes, centros de alumnos o grupos intermedios~\cite{2}.
+			    \item[OE:] Organizaciones Estudiantiles. Estas son federación de estudiantes, centros de alumnos o grupos intermedios~\cite{2}.
 			\end{description}
 
 	\item 	\begin{description}
@@ -65,6 +65,10 @@
 	\item 	\begin{description}
 			    \item[Burocracia:] Administración ineficiente a causa del papeleo, la rigidez y las 
 				formalidades superfluas~\cite{16}.
+			\end{description}
+
+	\item 	\begin{description}
+			    \item[Grupos Itermedios:] grupos de estudiantes que se reúnen con un objetivo y/o intereses en común, los cuales son reconocidos por la Universidad de Talca~\cite{18}.
 			\end{description}
 
 \end{glosario}
