--- a/Formato Memoria/Capitulo2/2.4.2_Roles.tex
+++ b/Formato Memoria/Capitulo2/2.4.2_Roles.tex
@@ -1,16 +1,18 @@
-Para llevar a cabo el desarrollo del proyecto existen roles fundamentales dentro de la metodología Scrum, los cuales son:
+Para llevar una correcta organización en la metodología se debe identificar las actividades que debe realizar cada persona que participa en el proyecto, tanto interna como externa (equipos de trabajo, usuarios e individuos que se relacionan de alguna forma con el proyecto). A este conjunto se le denomina roles.
+
+Una persona puede tener asignado uno o más roles y, a su vez, los roles pueden ser asignados a uno o más individuos. Cabe destacar que las asignaciones se hacen al comienzo del proyecto en base a las características de los sujetos y de los recursos que disponen. Es por ello que a continuación se explican los roles involucrados en el proyecto:
 
 \begin{itemize}
     \item   \begin{description}
-                \item[Scrum Master (SM):] Encargado de que el equipo tenga todas las condiciones necesarias para trabajar sin obstáculos y así cumplir con el sprint. Por otra parte, es quien procura que el proceso siga su curso. Además, supervisa la comunicación dentro del equipo, resuelve desacuerdos dentro del equipo o entre los equipos, ayuda a asegurar la productividad del equipo. Cabe destacar que el scrum master no necesariamente es el líder para el equipo y es el responsable del ``cómo hacer''
+                \item[Scrum Master (SM):] es el encargado de que el equipo tenga todas las condiciones necesarias para trabajar sin obstáculos y así cumplir con el sprint. Por otra parte, es quien procura que el proceso siga su curso. Además, supervisa la comunicación dentro del equipo, resuelve desacuerdos dentro del equipo o entre los equipos, y ayuda a asegurar la productividad del equipo. Cabe destacar que el scrum master no necesariamente es el líder para el equipo y es el responsable del ``cómo hacer''.
             \end{description}    
     
     \item   \begin{description}
-                \item[Product Owner (PO):] es el encargado de representar a los stakeholders (interesados externos o internos). La tarea más importante del PO es tomar decisiones sobre la realización y asignación de prioridad de los requisitos en la lista de tareas. Además, debe asignar requisitos del proyecto a los integrantes del equipo, ser extrovertido y tener facilidad para expresarse de forma oral y escrita. Por último, para que el PO pueda cumplir con sus funciones debe tener la capacidad de planificación y habilidades de comunicación, además de influir en el equipo con su interés y motivación.
+                \item[Product Owner (PO):] es el encargado de representar a los stakeholders (interesados externos o internos). La tarea más importante del PO es tomar decisiones sobre la realización y asignación de prioridad de las historias de usuarios en la lista de tareas. Además, debe asignar historias de usuarios del proyecto a los integrantes del equipo, ser extrovertido y tener facilidad para expresarse de forma oral y escrita. Por último, para que el PO pueda cumplir con sus funciones debe tener la capacidad de planificación y habilidades de comunicación, además de influir en el equipo con su interés y motivación.
             \end{description} 
     
     \item   \begin{description}
-                \item[Team (equipo):] encargados de cumplir con el desarrollo del producto y están reunidos en equipos de cinco a diez personas. Tiene autoridad para reorganizarse y definir las acciones necesarias o sugerir remoción de impedimentos, los cuales deben ser discutidos y realizados al final del Sprint. Para ello, debe cumplir con ciertas características tales como la autogestión, la autoorganización y debe ser multifuncional.
+                \item[Team (equipo):] son los encargados de cumplir con el desarrollo del producto y están reunidos en equipos de cinco a diez personas. Tiene autoridad para reorganizarse y definir las acciones necesarias o sugerir remoción de impedimentos (enfermedad de alguien del equipo, dependencias con otros equipos, presión excesiva del PO, etc.), los cuales deben ser discutidos y realizados al final del Sprint. Para ello, debe cumplir con ciertas características tales como la autogestión, la autoorganización y debe ser multifuncional.
             \end{description} 
     
     \item   \begin{description}
