--- a/Formato Memoria/Capitulo2/2.6_HerramientasPlanificacion.tex
+++ b/Formato Memoria/Capitulo2/2.6_HerramientasPlanificacion.tex
@@ -1,3 +1,6 @@
-Si bien existen muchas aplicaciones y herramientas que facilitan la planificación y gestión de proyecto tales como Trello, OpenProj, Open Workbench, GanttProject, etc, se escoge Taiga. Esta aplicación ayuda a gestionar las actividades de los proyectos y para ello se registran junto con sus respectivas historias de usuarios. Luego, cada historia de usuario se agrega a un Sprint y se desglosa en pequeñas tareas si así lo requiere, para así ser asignadas a las distintas personas que trabajan en el proyecto.
+Si bien existen muchas aplicaciones y herramientas que facilitan la planificación y gestión de proyecto tales como Trello, OpenProj, Open Workbench, GanttProject, etc, se escoge Taiga. Esta aplicación ayuda a gestionar las actividades de los proyectos y para ello se registran junto con sus respectivas historias de usuarios. Luego, cada historia de usuario se agrega a un sprint y se desglosa en pequeñas tareas si así lo requiere, para así ser asignadas a las distintas personas que trabajan en el proyecto.
 
-A cada proyecto se puede asociar personas con algún rol según corresponda (al menos un colaborador). Estas deben tener cuenta de usuario así ver en detalle el historial de su trabajo, los proyectos en los cuales participa, las tareas y el estado de estas (según en el lugar en que se ubique en el Kanban), entre otras características. Además, se puede priorizar las tareas según el rol que tenga cada persona y así lograr ver cuanta dificultad puede tener. Por otra parte, se puede visualizar la cantidad de colaboradores que tener el proyecto (si es que los hay).
+A cada proyecto se puede asociar personas con algún rol según corresponda (al menos un colaborador). Estas deben tener cuenta de usuario para así ver en detalle el historial de su trabajo, los proyectos en los cuales participa, las tareas y el estado de estas (según en el lugar en que se ubique en el Kanban), entre otras características. Además, se puede priorizar las tareas según el rol que tenga cada persona y así lograr ver cuánta dificultad puede tener. Por otra parte, se puede visualizar la cantidad de colaboradores que tiene el proyecto (si es que los hay).
+
+En cuanto al Kanban, es un tablero utilizado por los equipos de desarrollo del proyecto para mapear y visualizar el flujo del trabajo. Este consta de filas, las cuales representan diferentes tipos de actividades específicas del proyecto denominadas tarjetas kanban. Mientras que las columnas ayudan a visualizar el estado en que se encuentra cada actividad. Así mismo, las tarea que se encuentra en el tablero, aparece como una tarjeta Kanban~\cite{19}.
+
