--- a/Formato Memoria/Capitulo3/3.1.2_Aplicacion.tex
+++ b/Formato Memoria/Capitulo3/3.1.2_Aplicacion.tex
@@ -1,6 +1,8 @@
-La aplicación solicitada permite realizar el proceso que una O.E. debe realizar para la soicitud de un fondo por rendir segun la RU N\grad 2083 del año 2017 (ver Sección \ref{sec:Contexto}).
+La aplicación solicitada permite asistir al proceso que una OE debe realizar para la solicitud de un fondo por rendir segun la RU N\grad 2083 del año 2017 (ver \textbf{Sección \ref{sec:Contexto}}).
 
-Si bien existe una documentación de cómo realizar el proceso de fondo por rendir, es muy burocrático seguirlo al pie de la letra por las distintas O.E., cometiendo muchos errores (sobre todo las nuevas O.E. que no tienen experiencias). Ahora, dado que las O.E. son los principales usuarios de la aplicación, es que los requerimientos del sistema son cambiantes en cuanto a la facilidad de uso, pero el objetivo principal que es cumplir con lo estipulado por la RU anteriormente mencionada. Además, es posible que los requisitos cambiaran a medida que avanza el proyecto. Es por ello por lo que eran evaluados y aceptados siempre que su impacto no sea negativo, tanto en el desarrollo como en el tiempo que conlleva para así no atrasar la entrega.
+Si bien existe documentación de cómo realizar el proceso de fondo por rendir, es muy burocrático seguirlo al pie de la letra por las distintas OE, cometiendo muchos errores (sobre todo las nuevas OE que no tienen experiencia). Ahora, dado que las OE son los principales usuarios de la aplicación, es que los requerimientos del sistema son cambiantes en cuanto a la facilidad de uso, pero el objetivo principal que es cumplir con lo estipulado por la RU anteriormente mencionada se conserva. Además, es posible que los requisitos cambien a medida que avanza el proyecto. Es por ello por lo que son evaluados y aceptados siempre que su impacto no sea negativo, tanto en el desarrollo como en el tiempo que conlleva para así no atrasar la entrega.
 
-El sistema ayuda a la confección y exportación a un archivo PDF una solicitud de fondos para realizar una actividad. En caso de ser aprobada esta última, se debe subir al sistema una copia digitalizada de la RU asignada para luego confeccionar la rendición del evento. Tras terminar la elaboración de la rendición, esta es exportada a un archivo PDF junto con un listado de las boletas y/o facturas que deben ser adjuntadas al documento en el mismo orden que se ingresó. Este listado ayuda al usuario a chequear que las boletas sigan el orden en que se asignó en el sistema.
+El sistema ayuda a la confección y exportación a un archivo PDF que contiene una solicitud de fondos para realizar una actividad. En caso de ser aprobada esta última, se debe subir al sistema una copia digitalizada de la RU asignada para luego confeccionar la rendición del evento. Tras terminar la elaboración de la rendición, esta es exportada a un archivo PDF junto con un listado de las boletas y/o facturas que deben ser adjuntadas al documento. 
+
+En cuanto al listado de documentos, debe estar en el mismo orden en que fueron ingresados al sistema para así ayudar ayuda al usuario a chequear que las boletas y/o facturas sigan el orden asignado en el sistema.
 
