--- a/Formato Memoria/Capitulo3/3.2.1_Roles.tex
+++ b/Formato Memoria/Capitulo3/3.2.1_Roles.tex
@@ -1,13 +1,10 @@
-Para una correcta organización en la metodología se debe identificar las actividades que debe realizar cada persona que participa en el proyecto, tanto interna como externas (equipos de trabajo, usuarios e individuos que se relacionan de alguna forma con el proyecto). A este conjunto de labores se le denomina roles.
-
-Una persona puede tener asignado uno o más roles y a su vez estos últimos pueden ser asignados a una o más individuos. Cabe destacar que las asignaciones se hacen al comienzo del proyecto en base a las características de los sujetos y de los recursos que disponen. Es por ello por lo que a continuación se dará mayor énfasis en explicar los roles involucrados en el proyecto:
+Para cumplir con la metodología existen diferentes roles los cuales son los encargados de dar vida al proyecto (ver \textbf{Sección \ref{sec:Roles}}). Pero, para efectos de esta memoria y dada las características del proyecto, es que los roles de Scrum Master, Product Owner y Team los realiza el autor, encargándose de:
 
 \begin{itemize}
-    \item \textbf{Product Owner:}  Es quien administra el proyecto y dirige al equipo de trabajo, controlando que todo marche bien. Además, debe establecer estrategias para mitigar los riesgos que se presentan. Es por ello que debe tener cualidades de democrático, participativo y colaborador.
-    \item \textbf{Scrum Master: } encargado de trabajar junto al team ayudándoles en la toma de decisiones, escrituras y optimización del código, haciendo que el proceso siga su curso. Por otra parte, resuelve conflictos que existen en el equipo es por ello por lo que debe supervisar la comunicación entre los integrantes.
-    \item \textbf{Team: } encargado de la codificación de os componentes a desarrollar en la iteración. Debe tener conocimientos de los aspectos técnicos involucrados, ser colaborativo, comunicativo autocrítico y capaz de aprender rápidamente.
-    \item \textbf{Stakeholders: } son los individuos que interactúan con la aplicación que se realiza, ya que de ellos nacen los requerimientos del sistema a parte de  la RU en la cual está enfocado este proyecto. Es por ello que su participación es de gran importancia para mantener un desarrollo rápido y ágil.
+    \item Mantener la comunicación con los stakeholders.
+    \item Definir las historias de usuarios que se deben realizar en cada iteración.
+    \item Implementar funcionalidades que satisfagan las historias de usuarios.
 \end{itemize}
 
-
+En cuanto a los stakeholders, para este proyecto corresponden a los presidentes y secretarios de finanzas de las OE, además de las secretarias de las distintas Escuelas de la Facultad de Ingeniería de la Universidad de Talca.
 
