--- a/Formato Memoria/refs.bib
+++ b/Formato Memoria/refs.bib
@@ -148,3 +148,21 @@
   number = {},
   note = {14 de Abril de 2019}
 }
+
+@MISC{18,
+  title = {Instructivo Organizaciones Estudiantiles Utalca},
+  howpublished = {http://vde.utalca.cl/docs/Instructivo\_Organizaciones\_Estudiantiles\_Utalca.pdf},
+  note = {30 de abril de 2019},
+}
+
+@MISC{19,
+  title = {kanbanize},
+  howpublished = {https://kanbanize.com/es/recursos-de-kanban/primeros-pasos/que-es-tablero-kanban/},
+  note = {15 de mayo de 2019},
+}
+
+@MISC{20,
+  title = {draw.io},
+  howpublished = {https://www.draw.io/},
+  note = {15 de mayo de 2019},
+}
